# Practic

./: .gitignore  CMakeLists.txt  README.md  finder.c  finder.h  main.c  reader.c  reader.h  test.c  test.h  writer.h
hexdump/: CMakeLists.txt
hexdump/include/: hexdump.h
hexdump/src/: hexdump.c  main.c
lib/: CMakeLists.txt
lib/include/: arg_parser.h  finder.h  quick_sort.h  reader.h  util.h  writer.h
lib/src/: arg_parser.c  finder.c  quick_sort.c  reader.c  util.c  writer.c
lib/tests/: CMakeLists.txt
lib/tests/test_finder/: test_finder.c
lib/tests/test_reader/: test_reader.c
lib/tests/test_writer/: test_writer.c
list/: CMakeLists.txt
list/include/: list.h
list/src/: list.c  main.c
passgen/: CMakeLists.txt
passgen/include/: passgen.h
passgen/src/: main.c  passgen.c
readblock/: CMakeLists.txt
readblock/include/: readblock.h
readblock/src/: main.c  readblock.c
replace/: CMakeLists.txt
replace/include/: replace.h
replace/src/: main.c  replace.c
replace/tests/: CMakeLists.txt
replace/tests/test_replace/: test_replace.c
